--- a/erp-client/package.json
+++ b/erp-client/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "flatpickr": "^4.6.13",
     "jsvectormap": "^1.5.3",
     "next": "14.2.3",
