--- a/erp-client/package.json
+++ b/erp-client/package.json
@@ -16,7 +16,8 @@
     "next": "14.2.3",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
