--- a/erp-client/tsconfig.json
+++ b/erp-client/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.js"],
+  "include": ["src", "next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.js", "src/app/index.tsx", "src/tests/products/products.test.js", "jest.config.js"],
   "exclude": ["node_modules"]
 }
